...
    <string name="wellbeing_insight_activities">View your activities</string>
    <string name="wellbeing_insight_activities_description">Find a list of all the activities you have completed</string>

    <string name="title_weekly_insights_overview">Weekly insights</string>
    <string name="description_weekly_insights_overview">Here\'s how you\'ve done in the last 7 days</string>

    <string name="wellbeing_connect">Connect</string>
    <string name="wellbeing_be_active">Be active</string>
    <string name="wellbeing_take_notice">Take notice</string>
    <string name="wellbeing_keep_learning">Keep learning</string>
    <string name="wellbeing_give">Give</string>
    <string name="wellbeing_unassigned">None</string>
    <string name="days_active">Days logged</string>
...
    <string name="connect_suggestion">Get in touch with a friend</string>
    <string name="be_active_suggestion">Find a new way to exercise</string>
    <string name="keep_learning_suggestion">Take up a new hobby</string>
    <string name="take_notice_suggestion">Start a journal</string>
    <string name="give_suggestion">Lend a helping hand</string>
    <string name="default_suggestion">Get to know someone better</string>
    <string name="suggestions_insight_title_positive">Great job!</string>
    <string name="suggestions_insight_title_negative">Suggestions</string>

    <string name="start_walking">Started walking</string>
    <string name="stop_walking">Stopped walking</string>
    <string name="start_running">Started running</string>
    <string name="stop_running">Stopped running</string>
    <string name="start_cycling">Started cycling</string>
...
