...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/progress_insight_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="?android:attr/textColorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
...
                android:src="@drawable/wellbeing_type_indicator"
                app:layout_constraintBottom_toBottomOf="@+id/progress_insight_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/item_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progress_insight_title" />
...
