...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_gradient_keep_learning"
            android:orientation="vertical">

            <TextView
                android:id="@+id/help_card_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/wellbeing_keep_learning"
...
